<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_001"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtNomeBanco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c_005"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtCodAgencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/n_002"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtNomeAgencia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t_001"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtTipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/e_001"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtEndereco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c_006"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtComplemento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/b_009"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtBairro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c_007"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtCEP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c_008"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtCidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/u_001"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtUF"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/t_002"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/edtTelefone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/primary_text" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/banner_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" />

    </LinearLayout>

</LinearLayout>
