<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/r_001" />

                    <EditText
                        android:id="@+id/edtRaio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/b_003" />

                    <EditText
                        android:id="@+id/edtBanco_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/b_004" />

                    <EditText
                        android:id="@+id/edtBanco_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/b_005" />

                    <EditText
                        android:id="@+id/edtBanco_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/b_006" />

                    <EditText
                        android:id="@+id/edtBanco_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/b_007" />

                    <EditText
                        android:id="@+id/edtBanco_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/t_001" />

                    <EditText
                        android:id="@+id/edtTipo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/e_002" />

                    <EditText
                        android:id="@+id/edtEstado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/c_008" />

                    <EditText
                        android:id="@+id/edtCidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/b_009" />

                    <EditText
                        android:id="@+id/edtBairro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_magnify_light"
                        android:focusable="false"
                        android:inputType="text"
                        android:maxLength="40" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/banner_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" />

    </LinearLayout>

</LinearLayout>
